hphp/test/quick/ppl.php.expectf
Fatal error: A class, interface, or trait declaration cannot have duplicate modifiers. in %s on line 7
